catkin_ws/logs/backend/build.make.450.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:240:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:238:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::keyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> keyFrameFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:17:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp: In member function ‘void SLAM::Frame::setKeypoints(boost::shared_ptr<std::vector<cv::KeyPoint> >)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:56:81: error: ‘endl’ was not declared in this scope
    std::cout << "keypoint threshold is " << (depthSum / (NEIGHBOR*NEIGHBOR)) << endl;
                                                                                 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:56:81: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from /usr/include/boost/assert.hpp:82,
                 from /usr/include/boost/smart_ptr/shared_ptr.hpp:29,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
make[2]: *** [CMakeFiles/frontend.dir/src/Frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
